--- a/mise.toml
+++ b/mise.toml
@@ -7,4 +7,4 @@ run = "docker build . -t bhakti-challenge-service"
 
 [tasks.start]
 description = "Start the service using Docker"
-run = "docker run --env-file .env -p 8000:8000 bhakti-challenge-service"
+run = "docker run --env-file .env -p 8000:8000 -v ./gemini-live-api-service-account.secret.json:/app/gemini-live-api-service-account.secret.json bhakti-challenge-service"
